Add workshop acceptance and fix typos

--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
-	  <li> <b>Feb 12-17: </b>Attending Dagstuhl Seminar on <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=17071">Comnputer-Assisted Engineering for Robotics</a>.
+	  <li> <b>March 17: </b><a href="http://sites.bu.edu/hyness/rss-tlzoo/">Workshop</a> on specifying planning problems accepted at <a href="http://www.roboticsconference.org/"> RSS 2017</a> in Boston, MA.
+	  <li> <b>Feb 12-17: </b>Attending Dagstuhl Seminar on <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=17071">Computer-Assisted Engineering for Robotics</a>.
 	  <li> <b>Feb 7: </b>Paper accepted at <a href="https://ti.arc.nasa.gov/events/nfm-2017/">NFM 2017</a> in Moffett Field, CA.
 	</ul>
 	<i>Recent:</i>
 	<ul>
-	  <lt> <b>Aug 2016: </b> With <a href="">Yasser Shoukry</a> and <a href=>Min Kyung Lee  his collaborators recieved a $200,000 NSF EAGER Grant from the Smart and Connected Community (S&CC) program to investigate Socially Responsible Smart Cities. The UCLA/CMU team led by Dr. Shoukry aim to build IoT solutions that help the quality of life of underserved populations.
+	  <lt> <b>Aug 2016: </b> With <a href="">Yasser Shoukry</a> and <a href=>Min Kyung Lee</a>, recieved a $200,000 NSF EAGER Grant from the Smart and Connected Community (S&CC) program to investigate Socially Responsible Smart Cities.
 	  
 	  <!--
 <li> <b>July 9: </b>Paper accepted at <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD16/index.shtml">FMCAD 2016</a> in Mountain View, CA.
