Update publications list

--- a/index.html
+++ b/index.html
@@ -100,15 +100,19 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
-	  <li> <b>March 17: </b><a href="http://sites.bu.edu/hyness/rss-tlzoo/">Workshop</a> on specifying planning problems accepted at <a href="http://www.roboticsconference.org/"> RSS 2017</a> in Boston, MA.
-	  <li> <b>Feb 12-17: </b>Attending Dagstuhl Seminar on <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=17071">Computer-Assisted Engineering for Robotics</a>.
-	  <li> <b>Feb 7: </b>Paper accepted at <a href="https://ti.arc.nasa.gov/events/nfm-2017/">NFM 2017</a> in Moffett Field, CA.
+	  <li> <b>July 15: </b>Organized a <a href="http://sites.bu.edu/hyness/rss-tlzoo/">Workshop on Specifying Planning Problems in Robotics</a>, and presented at the <a href="http://www.kavrakilab.org/2017-rss-workshop/">Workshop on Integrated Task and Motion Planning</a> at <a href="http://www.roboticsconference.org/"> RSS 2017</a> in Boston, MA.
+	  <li> <b>June 14: </b>Two papers accepted at <a href="https://www.iros2017.org/">IROS 2017</a> in Vancouver, BC, Canada.
 	</ul>
 	<i>Recent:</i>
 	<ul>
+          <lt> <b>Feb 12-17: </b>Attending Dagstuhl Seminar on <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=17071">Computer-Assisted Engineering for Robotics</a>.
+
+<!--
+	  <li> <b>Feb 7: </b>Paper accepted at <a href="https://ti.arc.nasa.gov/events/nfm-2017/">NFM 2017</a> in Moffett Field, CA.
+
 	  <lt> <b>Aug 2016: </b> With <a href="">Yasser Shoukry</a> and <a href=>Min Kyung Lee</a>, recieved a $200,000 NSF EAGER Grant from the Smart and Connected Community (S&CC) program to investigate Socially Responsible Smart Cities.
 	  
-	  <!--
+
 <li> <b>July 9: </b>Paper accepted at <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD16/index.shtml">FMCAD 2016</a> in Mountain View, CA.
 	  <li> <b>June 13: </b>Paper accepted at <a href="http://formats2016.lsv.fr">FORMATS 2016</a> in Qu&eacutebec City, QC.
 	  <li> <b>Apr 15: </b>Tool paper on <a href="https://github.com/VerifiableRobotics/slugs">slugs</a> accepted at <a href="http://i-cav.org/2016/">CAV 2016</a> in Toronto, ON.
@@ -166,9 +170,16 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
   </ul>
 
 <h3>Conference Publications</h3>
+<h4>2017</h4>
+<ul id="2017">
+            <li>C. Vasile, <u>V. Raman</u>, S. Karaman, <b>Sampling-Based Synthesis of Maximally-Satisfying Controllers for Temporal Logic Specifications</b>, <i>IROS 2017</i> (to appear).
+            <li>C. Paxton, <u>V. Raman</u>, G. Hager, M. Kobilarov <b>Combining Neural Networks and Tree Search for Task and Motion Planning in Challenging Environments</b>, <i>IROS 2017</i> (to appear).
+	      
+            <li>S. Jha, <u>V. Raman</u>, T. Sahai, A. Pinto, M. Francis, <b>On Learning Sparse Boolean Formulae For Explaining AI Decisions</b>, <i>NFM 2017</i>.
+
+	    </ul>
 <h4>2016</h4>
 <ul id="2016">
-            <li>S. Jha, <u>V. Raman</u>, T. Sahai, A. Pinto, M. Francis, <b>On Learning Sparse Boolean Formulae For Explaining AI Decisions</b>, <i>NFM 2017</i> (to appear).
             <li>S. Jha, <u>V. Raman</u>, S. A. Seshia, <b>On ∃ ∀ ∃! Solving: A Case Study on Automated Synthesis of Magic Card Tricks</b>, <i>FMCAD 2016</i>.
 
 	    <li>S. Jha, <u>V. Raman</u>, <b>Towards Automated Synthesis of Stochastic Linear Hybrid Systems Controllers</b>, <i>FORMATS 2016</i>.
