Update news and pubs

--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,15 @@
 <table border=0 width=100%>
 <tr class="spaceUnder">
   <td>
+  <a name="stl2mpc"><h3>Scalable Task & Motion Planning with Temporal Logic Specifications</h3></a>
+  Lightweight methods for baking properties into system behavior have shown promise for scaling correct-by-construction synthesis beyond illustrative examples and to real-world domains. We have been developing methods for enforcing temporal logic specifications on the outputs of state-of-the-art search-based and sampling-based robotic task and motion planning. These methods are effective at imposing constraints and costs that are automatically generated from logical specifications.<br>
+    <u>Relevant publications:</u> <b><a href="">[IROS17_1]</a> <a href="">[IROS17_2]</a></b>
+  </td>
+  <td width="45%" align="center"><img width="95%" src="figures/rwc_solution.png"></td>   
+  </tr>
+
+<tr class="spaceUnder">
+  <td>
   <a name="stl2mpc"><h3>Model Predictive Control Synthesis from Timed Logics</h3></a>
   With colleages at UC Berkeley, I have created a framework for posing  model-predictive control tasks as synthesis from signal temporal logic specifications.
   Motivating case studies include smart building-level (“micro-grid”) power systems with controllable loads and generators, and desired timed properties
@@ -66,7 +75,7 @@
     that guarantee safe execution and goal fulfillment for complex tasks involving teams of robots.<br>
       <u>Relevant publications:</u> <b> <a href = "papers/vraman_icra_14.pdf"target="blank">[ISRR15]</a> <a href = "papers/vraman_iros_14.pdf"target="blank">[IROS14]</a> <a href = "papers/vraman_icra_14.pdf"target="blank">[ICRA14]</a></b>
     </td>
-  <td width="45%" align="center"><img width="80%" src="figures/2d-avoid-bright.jpg"></td>
+  <td width="45%" align="center"><img width="70%" src="figures/2d-avoid-bright.jpg"></td>
   </tr>
 
 <tr class="spaceUnder">
@@ -156,7 +165,7 @@ This project aimed to uncover guidelines for producing more compelling, low-cost
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2016 Vasumathi Raman.  Last updated January 19, 2016.</p>
+		<p>&copy; 2017 Vasumathi Raman.  Last updated December 17, 2017.</p>
 	</div>
 </div>
 </body>
