Update HSCC paper

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 	<a href="papers/vraman_acc_15.pdf">[pdf]</a>
 	
         <li><u>V. Raman</u>, A. Donz&eacute;, D. Sadigh, R. M. Murray, S. A. Seshia, <b>Reactive Synthesis from Signal Temporal Logic Specifications</b>, <i>HSCC 2015</i>.
-	<a href="papers/vraman_hscc_15.pdf">[pdf]</a>
+	<a href="papers/vraman_hscc_15_corrected.pdf">[pdf]</a>
 	<a href="talks/vraman_talk_hscc15.pdf">[slides]</a>
 
 	</ul>
