--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
   With colleages at UC Berkeley, I have created a framework for posing  model-predictive control tasks as synthesis from signal temporal logic specifications.
   Motivating case studies include smart building-level (“micro-grid”) power systems with controllable loads and generators, and desired timed properties
   such as the maximum period of power loss during failures or outages.<br>
-    <u>Relevant publications:</u> <b><a href="papers/vraman_adhs_15.pdf">[ADHS15]</a> <a href="papers/vraman_hscc_15.pdf">[HSCC15]</a> <a href = "papers/vraman_cdc_14.pdf"target="blank">[CDC14]</a> <a href = "papers/vraman_cyphy_14.pdf"target="blank">[CyPhy14]</a></b>
+    <u>Relevant publications:</u> <b><a href="papers/vraman_adhs_15.pdf">[ADHS15]</a> <a href="papers/vraman_hscc_15_corrected.pdf">[HSCC15]</a> <a href = "papers/vraman_cdc_14.pdf"target="blank">[CDC14]</a> <a href = "papers/vraman_cyphy_14.pdf"target="blank">[CyPhy14]</a></b>
   </td>
   <td width="45%" align="center"><img width="95%" src="figures/hvac_nondet.png"></td>   
   </tr>
