Update to include Nuro

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
   
 <title>Vasu Raman</title>
-<meta name="Vasu Raman is a Robotics Researcher based in San Francisco." content="" />
+<meta name="Vasu Raman is a roboticist based in San Francisco. She is passionate about safe autonomy for robots that solve real problems." content="" />
 <meta name="google-site-verification" content="-7qZnnAWS5Dp4S7IMyEi_Xs3WGrOBs9PqF0z1d5eYks" />
 
 <link href="style.css" rel="stylesheet" type="text/css" />
@@ -40,7 +40,7 @@
 		[vasumathi.raman AT gmail]
 		
 		<p>
-		  <b><font size="5"><a href="vraman_CV.pdf"target="blank"><img src="figures/cv_logo.png" height=25></a></font></b>
+		  <b><font size="5"><a href="vraman_resume.pdf"target="blank"><img src="figures/cv_logo.png" height=25></a></font></b>
 		  <a href="http://twitter.com/likeavass" target="blank"><img src="figures/twitter_logo.svg" width=25></a>
 		  <a href="https://www.linkedin.com/in/vasumathi-raman/" target="blank"><img src="figures/linkedin_logo.png" width=25></a>
 	   </td>
@@ -62,20 +62,15 @@
     <tr>      
       <td width="30%" align="center" style="vertical-align: top;"><img src="vasu_resize.jpg"></td>
       <td>
-	 I am a roboticist based in the San Francisco Bay Area. Previously, I was a Senior Scientist at the the United Technologies Research Center in Berkeley, CA, and a <a href="http://www.cms.caltech.edu/">Computing and Mathematical Sciences</a> postdoctoral scholar at the <a href="http://www.caltech.edu/">California Institute of Technology</a>,
-	 where I worked with <a href="http://www.cds.caltech.edu/~murray/">Richard Murray</a> and <a href="http://www.eecs.berkeley.edu/~sseshia/">Sanjit Seshia</a>.
+	 I am a roboticist based in the San Francisco Bay Area with over a decade of experience in robotics as a researcher and engineer. I am currently at <a href="https://nuro.ai/">Nuro</a>, where I help our robots respond appropriately to their environment via my work on prediction and planning. I was previously at <a href="https://zoox.com/">Zoox</a>, building key elements of decision planning, and at the <a href="http://www.utrc.utc.com/">United Technologies Research Center</a>, leading projects on formal verification of jet engine control logic and disaster management for smart buildings. 
 	 <p><p>
-	 <!--My research explores algorithmic methods for designing and controlling autonomous systems, combining ideas from hybrid systems and software verification
-	 to guarantee correctness with respect to a formal specification. I focus on safety-critical
-	 applications involving cyber-physical systems performing complex tasks in adversarial environments, often interacting with a variety of human users.
-	 I draw on technical and creative perspectives from hybrid systems, robotics, control and game theory.-->
-	 I am interested in algorithms for designing and controlling autonomous systems, guaranteeing correctness with respect to formal specifications. I focus on safety-critical systems performing complex tasks in adversarial environments, interacting with a variety of agents. I draw on technical and creative perspectives from formal methods for software verification, hybrid systems, robotics, control and game theory. 
-	 	 
+	 I specialize in behaviour and motion planning algorithms for autonomous systems, and in scalable methods for guaranteeing correctness with respect to formal specifications. I am driven by safety-critical systems performing complex tasks in interactive environments. I enjoy fusing technical and creative perspectives from formal methods for software verification, hybrid systems, robotics, control and game theory.
+	 	 	 
 	 <p>I earned a Ph.D. in 2013 from the <a href="http://www.cs.cornell.edu/">Department of Computer Science</a> at
 	 <a href="http://www.cornell.edu/">Cornell University</a>, where I was advised by <a href="http://verifiablerobotics.com/">Hadas Kress-Gazit</a>
 	 and affiliated with the <a href="http://cornell-asl.org">Autonomous Systems Lab</a> and the
 	 <a href="http://ltlmop.github.com/">LTLMoP Project</a>. My <a href="phdthesis.html" target="blank">dissertation</a> addressed challenges
-	 in the synthesis of provably correct control for robotics.
+	 in the synthesis of provably correct control for robotics. I was a <a href="http://www.cms.caltech.edu/">Computing and Mathematical Sciences</a> postdoctoral scholar at the <a href="http://www.caltech.edu/">California Institute of Technology</a>, where I worked with <a href="http://www.cds.caltech.edu/~murray/">Richard Murray</a> and <a href="http://www.eecs.berkeley.edu/~sseshia/">Sanjit Seshia</a>.
 	 I also hold a B.A. in Computer Science and Mathematics from <a href = "http://www.wellesley.edu/">Wellesley College</a>.
       </td>
     </tr>
@@ -100,19 +95,17 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
-	  <li> <b>Nov 8: </b> Paper presented (by Debbie Tsai) at <a href="http://buildsys.acm.org/2017/">BuildSys 2017</a> in Delft, Netherlands.
-	  <li> <b>Sept 24: </b>Two papers presented (by <a href="https://cristianvasile.com/">Cristi</a> and <a href="http://cpaxton.github.io/about/">Chris</a>) at <a href="https://www.iros2017.org/">IROS 2017</a> in Vancouver, BC, Canada.
+	  <li> <b>Sept 19: </b> Women in Robotics <a href="https://www.eventbrite.com/e/women-in-robotics-tech-talk-hosted-by-women-of-nuro-tickets-69062587057">Tech Talk</a> at Nuro HQ in Mountain View, CA, USA.
 	</ul>
 	<i>Recent:</i>
 	<ul>
-          <lt>
-	    <b>July 15: </b>Organized a <a href="http://sites.bu.edu/hyness/rss-tlzoo/">Workshop on Specifying Planning Problems in Robotics</a>, and presented at the <a href="http://www.kavrakilab.org/2017-rss-workshop/">Workshop on Integrated Task and Motion Planning</a> at <a href="http://www.roboticsconference.org/"> RSS 2017</a> in Boston, MA.
+          <lt> <b>June 17: </b> Invited talk at the <a href="https://inic8.bitbucket.io/DThree19/index.html">DThree19</a> workshop at <a href="http://cvpr2019.thecvf.com/">CVPR 2019</a> in Long Beach, CA, USA.
 	 </ul>
       </div>
       <br>
     <a name="pubs"></a>
     <br>
-    <h3>Key Research Projects</h3>
+    <h3>Key Academic Research Projects</h3>
     <ul>
       <li><a href="projects.html#scaling" target="blank">Scalable Task & Motion Planning with Temporal Logic Specifications</a></li>
       <li><a href="projects.html#stl2mpc" target="blank">Model Predictive Control Synthesis from Timed Logics</a></li>
@@ -334,7 +327,7 @@ I also have a somewhat significant history with College Mock Trial.
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2017 Vasumathi Raman.  Last updated December 17, 2017.</p>
+		<p>&copy; 2019 Vasumathi Raman.  Last updated September 10, 2019.</p>
 	</div>
    </body>
 </html>
