Update to Zipline

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <tr>      
       <td width="30%" align="center" style="vertical-align: top;"><img src="vasu_resize.jpg"></td>
       <td>
-	 I am a roboticist based in the San Francisco Bay Area with over a decade of experience in robotics as a researcher and engineer. I am currently at <a href="https://nuro.ai/">Nuro</a>, where I help our robots respond appropriately to their environment via my work on prediction and planning. I was previously at <a href="https://zoox.com/">Zoox</a>, building key elements of decision planning, and at the <a href="http://www.utrc.utc.com/">United Technologies Research Center</a>, leading projects on formal verification of jet engine control logic and disaster management for smart buildings. 
+	 I am a roboticist based in the San Francisco Bay Area with over a decade of experience in robotics as a researcher and engineer. I am currently at <a href="https://flyzipline.com/">Zipline</a>, where I work on behavior planning for a fleet of drones that deliver life-saving medical supplies around the world. I was previously at <a href="https://nuro.ai/">Nuro</a> and <a href="https://zoox.com/">Zoox</a>, building key elements of prediction and planning for self-driving cars, and at the <a href="http://www.utrc.utc.com/">United Technologies Research Center</a>, leading projects on formal verification of jet engine control logic and disaster management for smart buildings. 
 	 <p><p>
 	 I specialize in behaviour and motion planning algorithms for autonomous systems, and in scalable methods for guaranteeing correctness with respect to formal specifications. I am driven by safety-critical systems performing complex tasks in interactive environments. I enjoy fusing technical and creative perspectives from formal methods for software verification, hybrid systems, robotics, control and game theory.
 	 	 	 
@@ -327,7 +327,7 @@ I also have a somewhat significant history with College Mock Trial.
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2019 Vasumathi Raman.  Last updated September 10, 2019.</p>
+		<p>&copy; 2021 Vasumathi Raman.  Last updated January 28, 2021.</p>
 	</div>
    </body>
 </html>
